# rust-cpp-robustness

./: .gitignore  Dockerfile  README.md  setup.sh
cpp/: .clang-format  CMakeLists.txt
cpp/bufferoverflow/src/: client.cpp
cpp/include/: FileManager_safe.h  race_condition.h
cpp/race-condition/: CMakeLists.txt
cpp/race-condition/include/: sync.h
cpp/race-condition/src/: main.cpp
cpp/src/Bufferoverflow/: .clang-format  client  exploit  exploit.cpp  notes.md  server  server.cpp  setup.sh  test_client.py
cpp/src/bufferoverflow/: CMakeLists.txt  client.cpp  server.cpp
cpp/src/deadlocks/: CMakeLists.txt  deadlock.cpp  deadlock_safe.cpp  main.cpp
cpp/src/memory-leak/: CMakeLists.txt  memory_leak.cpp  memory_leak_safe.cpp
cpp/src/race-condition/: CMakeLists.txt  race-condition_safe.cpp  race_condition.cpp  race_condition_safe.cpp  sync.cpp
cpp/src/use-after-free/: CMakeLists.txt  FileManager.cpp  FileManager_safe.cpp  main.cpp  main_safe.cpp
cpp/tests/: CMakeLists.txt  main.cpp  unittest.cpp
cpp/use-after-free/: CMakeLists.txt
cpp/use-after-free/build-exploit/: Makefile  use-after-free
cpp/use-after-free/include/: FileManager.h
rust/: notes.md
rust/buffer_overflow/: Cargo.toml  notes.md
rust/buffer_overflow/src/: main.rs  save.rs
rust/bufferoverflow/: Cargo.toml  client.cpp
rust/bufferoverflow/src/: client.cpp  main.rs  server.rs  simple_overflow.rs
rust/dangling_poiters/: Cargo.toml
rust/dangling_poiters/src/: main.rs
rust/deadlock/: Cargo.toml  config.txt  log.txt
rust/deadlock/src/: deadlock.rs  deadlock_safe.rs
rust/memory-leak/: Cargo.toml
rust/memory-leak/src/: memory_leak.rs  memory_leak_safe.rs
rust/race-condition/: Cargo.toml
rust/race-condition/src/: main.rs  race_condition.rs  race_condition_safe.rs  sync.rs
rust/src/: main.rs  udp_client.rs  udp_server.rs
rust/use-after-free/: Cargo.toml
rust/use-after-free/src/: use_after_free.rs  use_after_free_safe.rs
